feat: request service UI (#11)
* :arrow_up: Bump dart_code_metrics from 4.15.2 to 4.16.0 (#3)

Bumps [dart_code_metrics](https://github.com/dart-code-checker/dart-code-metrics) from 4.15.2 to 4.16.0.
- [Release notes](https://github.com/dart-code-checker/dart-code-metrics/releases)
- [Changelog](https://github.com/dart-code-checker/dart-code-metrics/blob/master/CHANGELOG.md)
- [Commits](https://github.com/dart-code-checker/dart-code-metrics/compare/4.15.2...4.16.0)

---
updated-dependencies:
- dependency-name: dart_code_metrics
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* feat(core): integrate core pkg in the provider app

* refactor: fix FormBuilderTextField

* build: remove unused deps

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Conrad Hoang <tcmhoang@outlook.com>

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,7 +1,169 @@
 {
-    "@@locale": "en",
-    "revupAppBarTitle": "Revup",
-    "@revupAppBarTitle": {
-        "description": "Text shown in the AppBar of the first page"
-    }
+  "@@locale": "en",
+  "revupAppBarTitle": "Revup",
+  "@revupAppBarTitle": {
+    "description": "Text shown in the AppBar of the first page"
+  },
+  "aboutUsLabel": "About Us",
+  "acceptPolicyLabel": "By registering or logging in, you agree to the ",
+  "accountLabel": "My account",
+  "activateLabel": "Activate",
+  "addLabel": "Add new",
+  "addressLabel": "Address: ",
+  "addServiceAppBarTitle": "Choose the services",
+  "andLabel": " and ",
+  "autoRepairLabel": "auto repair",
+  "blankLabel": "Please do not leave it blank",
+  "callHelpLabel": "Call Help",
+  "canceledLabel": "Canceled",
+  "cancelLabel": "Cancel",
+  "cashLabel": "Cash",
+  "changeLanguageLabel": "Change Language",
+  "chooseImageLabel": "Choose image",
+  "chooseImageNoteLabel": "Add a photo for the repairman to better visualize your request",
+  "chooseProductAppBarTitle": "Choose product",
+  "commonErrorLabel": "An error occurred",
+  "completeRegistrationLabel": "Complete registration",
+  "confirmLabel": "Confirm",
+  "continueLabel": "Continue",
+  "dateLabel": "DATE",
+  "dayLabel": "Day",
+  "dealsForYouLabel": "Deals for you",
+  "detailLabel": "Detail",
+  "discoverNowLabel": "Discover now",
+  "distanceLabel": "Distance",
+  "doneLabel": "Done",
+  "editProfileLabel": "Edit Profile",
+  "emailLabel": "EMAIL",
+  "emptyErrorLabel": "Please fill in",
+  "emptyLabel": "Empty",
+  "endowLabel": "Endow",
+  "enterOTPCodeLabel": "Enter your OTP",
+  "existedPhoneNumberLabel": "Phone number already existed",
+  "faqsLabel": "FAQs",
+  "fullNameLabel": "FULL NAME",
+  "gasStationLabel": "Find a gas station",
+  "guideAndSupportLabel": "Guide & Support",
+  "homeLabel": "Home",
+  "ignoreLabel": "Ignore",
+  "imageFromGalleryLabel": "Choose image from gallery",
+  "invalidFormatLabel": "Invalid format",
+  "invalidOTPLabel": "Invalid OTP code. Please enter again!",
+  "invalidPhoneNumberLabel": "Please enter a valid phone number",
+  "invoiceDetailsLabel": "Invoice details",
+  "invoiceInformationLabel": "Invoice information",
+  "loginBySSOLabel": "Or login with",
+  "loginPageLabel": "Login / Register revup account now",
+  "loginPageTitle": "Welcome to revup!",
+  "logoutLabel": "Logout",
+  "minutesLabel": "minutes",
+  "momoLabel": "MoMo",
+  "morePaymentMethodsLabel": "MORE PAYMENT METHODS",
+  "motorcycleRepairLabel": "motorcycle repair",
+  "newRequestServiceAppBarTitle": "Other service request",
+  "nextLabel": "Next",
+  "notificationLabel": "Notification",
+  "onboardPageFirstTitle": "Professional car repair service",
+  "onboardPageSecondTitle": "Always on duty on all roads",
+  "onboardPageThirdTitle": "Transparent price, rest assured repair",
+  "organizationLabel": "Organization account",
+  "paidLabel": "Paid",
+  "paymentLabel": "Payment",
+  "phoneFieldLabel": "Your phone number",
+  "phoneLabel": "PHONE",
+  "phoneRequiredErrorLabel": "Please enter your phone number",
+  "photoWithCameraLabel": "Take photo",
+  "postLabel": "Posts",
+  "privacyLabel": "Privacy Policy",
+  "productListLabel": "List of products",
+  "productPriceLabel": "Unit price",
+  "questionAccountLabel": "Why is my REVUP account locked?",
+  "questionCallLabel": "How to make calls on Revup app?",
+  "questionOTPLabel": "Why didn't I receive the Verification Code (OTP)?",
+  "questionPayLabel": "How to pay on Revup app?",
+  "rateLabel": "Rate your most recent repair",
+  "ratingLabel": "Rating",
+  "repairerAroundLabel": "Repairer around here",
+  "requestServiceLabel": "Request service ",
+  "resendOTPLabel": "Resend OTP code",
+  "reviewRepairmentLabel": "Reviews for repairmen",
+  "selectProductLabel": "Select product",
+  "sendFeedbackLabel": "Rate, send your feedback for the repairman!",
+  "sendLabel": "Send",
+  "sendOTPCodeToLabel": "OTP code has been sent to: ",
+  "serviceAccountLabel": "My service",
+  "serviceDescriptionLabel": "Description (100 characters max)",
+  "serviceDetailLabel": "Service details required",
+  "serviceDetailsAppBarTitle": "Service details",
+  "serviceFeeLabel": "Service fee",
+  "serviceInforLabel": "Service information",
+  "serviceInvoiceLabel": "Service Invoice",
+  "serviceLabel": "Service ",
+  "serviceNameLabel": "Service name",
+  "servicePriceLabel": "Price",
+  "serviceRequestLabel": "Service request",
+  "skipLabel": "Skip",
+  "sortAsLabel": "Sort as",
+  "sosLabel": "Call for help",
+  "termLabel": "Terms of Service",
+  "termsOfServiceLabel": "Terms of Service",
+  "termsPrivacyLabel": "Terms and Privacy",
+  "timeLabel": "Time",
+  "total": "Total",
+  "totalFeeLabel": "Total Fee",
+  "totalLabel": "Total",
+  "transitFeeLabel": "Transit fee",
+  "tubeLabel": "Change the tube",
+  "updateLabel": "Update",
+  "vehicleMaintenanceLabel": "Vehicle maintenance",
+  "videoCallDescription": "Partners can discuss via video call with the repairman for the best preparation!",
+  "workerRepairing": "Worker is repairing",
+  "workerRepairLabel": "Worker doing repairs",
+  "yourFeedbackLabel": "Your feedback",
+  "zaloPayLabel": "ZaloPay",
+  "codeOrderLabel": "Code orders: ",
+  "cancelOrderLabel": "You have canceled this order",
+  "completedOrderLabel": "Order completed",
+  "timeBookingLabel": "Service booking time",
+  "timeCancelLabel": "Cancellation time",
+  "timeComletionLabel": "Completion time",
+  "orderDetailLabel": "Order details",
+  "vehicleTypeLabel": "Vehicle type ",
+  "totalServiceFeeLabel": "Total service fee",
+  "feeTransportLabel": "Fee of transport",
+  "intoMoneyLabel": "Into Money",
+  "telLabel": "Tel: ",
+  "paymentMethodLabel": "Payment method",
+  "zaloPaymentLabel": "Pay with Zalo Pay",
+  "cashPaymentLabel": "Payment in cash",
+  "feedBackLabel": "Feedback",
+  "orderInformationLabel": "Order Information",
+  "contactRepairServiceLabel": "Contact repair service",
+  "serviceReviewsLabel": "Service Reviews",
+  "historyLabel": "History",
+  "additionalCostsLabel": "Additional costs",
+  "bonusServicesLabel": "Bonus services",
+  "requestInformationReceivedLabel": "Request information received",
+  "distanceLabel": "Distance ",
+  "quoteLabel": "Quote",
+  "startLabel": "Start",
+  "categoriesLabel": " categories",
+  "messagesForCustomersLabel": "Partners can exchange via text messages and video calls with customers for the best preparation!",
+  "completeRepairLabel": "Complete repair",
+  "pictureLabel": "Picture",
+  "collectMoneyCustomersLabel": "Collect money from customers",
+  "completedItemLabel": "Completed Item",
+  "messagesCheckInformation": "Partners please double check the information, the images above are correct, then slide to complete the application.",
+  "fixAgainLabel": "Fix again",
+  "selectCompletedItemLabel": "Select completed item",
+  "messagesSelectItemLabel": "The partner selects the completed item and sends it to the customer, then wait a bit for the customer to confirm",
+  "addNewServiceLabel": "Add new service",
+  "servicePhotoLabel": "Service photo",
+  "enterServiceNameLabel": "Enter service name",
+  "serviceFeeLabel": "Service fee",
+  "enterMountLabel": "Enter the amount",
+  "priceUnitLabel": "Price unit",
+  "enterShortDescriptionLabel": "Enter a short description",
+  "completeLabel": "Complete",
+  "saveLabel": "Save"
 }
