refactor: remove asset image (tire) bump apllication version to 1.0.0-dev+7 reorder arb files move files to its appropriated location

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -8,29 +8,43 @@
   "acceptPolicyLabel": "By registering or logging in, you agree to the ",
   "accountLabel": "My account",
   "activateLabel": "Activate",
+  "additionalCostsLabel": "Additional costs",
   "addLabel": "Add new",
+  "addNewServiceLabel": "Add new service",
   "addressLabel": "Address: ",
   "addServiceAppBarTitle": "Choose the services",
   "andLabel": " and ",
   "autoRepairLabel": "auto repair",
   "blankLabel": "Please do not leave it blank",
+  "bonusServicesLabel": "Bonus services",
   "callHelpLabel": "Call Help",
   "canceledLabel": "Canceled",
   "cancelLabel": "Cancel",
+  "cancelOrderLabel": "You have canceled this order",
   "cashLabel": "Cash",
+  "cashPaymentLabel": "Payment in cash",
+  "categoriesLabel": " categories",
   "changeLanguageLabel": "Change Language",
   "chooseImageLabel": "Choose image",
   "chooseImageNoteLabel": "Add a photo for the repairman to better visualize your request",
   "chooseProductAppBarTitle": "Choose product",
+  "codeOrderLabel": "Code orders: ",
+  "collectMoneyCustomersLabel": "Collect money from customers",
   "commonErrorLabel": "An error occurred",
+  "completedItemLabel": "Completed Item",
+  "completedOrderLabel": "Order completed",
+  "completeLabel": "Complete",
   "completeRegistrationLabel": "Complete registration",
+  "completeRepairLabel": "Complete repair",
   "confirmLabel": "Confirm",
+  "contactRepairServiceLabel": "Contact repair service",
   "continueLabel": "Continue",
   "dateLabel": "DATE",
   "dayLabel": "Day",
   "dealsForYouLabel": "Deals for you",
   "detailLabel": "Detail",
   "discoverNowLabel": "Discover now",
+  "distanceLabel": "Distance ",
   "distanceLabel": "Distance",
   "doneLabel": "Done",
   "editProfileLabel": "Edit Profile",
@@ -38,15 +52,23 @@
   "emptyErrorLabel": "Please fill in",
   "emptyLabel": "Empty",
   "endowLabel": "Endow",
+  "enterMountLabel": "Enter the amount",
   "enterOTPCodeLabel": "Enter your OTP",
+  "enterServiceNameLabel": "Enter service name",
+  "enterShortDescriptionLabel": "Enter a short description",
   "existedPhoneNumberLabel": "Phone number already existed",
   "faqsLabel": "FAQs",
+  "feedBackLabel": "Feedback",
+  "feeTransportLabel": "Fee of transport",
+  "fixAgainLabel": "Fix again",
   "fullNameLabel": "FULL NAME",
   "gasStationLabel": "Find a gas station",
   "guideAndSupportLabel": "Guide & Support",
+  "historyLabel": "History",
   "homeLabel": "Home",
   "ignoreLabel": "Ignore",
   "imageFromGalleryLabel": "Choose image from gallery",
+  "intoMoneyLabel": "Into Money",
   "invalidFormatLabel": "Invalid format",
   "invalidOTPLabel": "Invalid OTP code. Please enter again!",
   "invalidPhoneNumberLabel": "Please enter a valid phone number",
@@ -56,6 +78,9 @@
   "loginPageLabel": "Login / Register revup account now",
   "loginPageTitle": "Welcome to revup!",
   "logoutLabel": "Logout",
+  "messagesCheckInformation": "Partners please double check the information, the images above are correct, then slide to complete the application.",
+  "messagesForCustomersLabel": "Partners can exchange via text messages and video calls with customers for the best preparation!",
+  "messagesSelectItemLabel": "The partner selects the completed item and sends it to the customer, then wait a bit for the customer to confirm",
   "minutesLabel": "minutes",
   "momoLabel": "MoMo",
   "morePaymentMethodsLabel": "MORE PAYMENT METHODS",
@@ -66,14 +91,19 @@
   "onboardPageFirstTitle": "Professional car repair service",
   "onboardPageSecondTitle": "Always on duty on all roads",
   "onboardPageThirdTitle": "Transparent price, rest assured repair",
+  "orderDetailLabel": "Order details",
+  "orderInformationLabel": "Order Information",
   "organizationLabel": "Organization account",
   "paidLabel": "Paid",
   "paymentLabel": "Payment",
+  "paymentMethodLabel": "Payment method",
   "phoneFieldLabel": "Your phone number",
   "phoneLabel": "PHONE",
   "phoneRequiredErrorLabel": "Please enter your phone number",
   "photoWithCameraLabel": "Take photo",
+  "pictureLabel": "Picture",
   "postLabel": "Posts",
+  "priceUnitLabel": "Price unit",
   "privacyLabel": "Privacy Policy",
   "productListLabel": "List of products",
   "productPriceLabel": "Unit price",
@@ -81,12 +111,16 @@
   "questionCallLabel": "How to make calls on Revup app?",
   "questionOTPLabel": "Why didn't I receive the Verification Code (OTP)?",
   "questionPayLabel": "How to pay on Revup app?",
+  "quoteLabel": "Quote",
   "rateLabel": "Rate your most recent repair",
   "ratingLabel": "Rating",
   "repairerAroundLabel": "Repairer around here",
+  "requestInformationReceivedLabel": "Request information received",
   "requestServiceLabel": "Request service ",
   "resendOTPLabel": "Resend OTP code",
   "reviewRepairmentLabel": "Reviews for repairmen",
+  "saveLabel": "Save",
+  "selectCompletedItemLabel": "Select completed item",
   "selectProductLabel": "Select product",
   "sendFeedbackLabel": "Rate, send your feedback for the repairman!",
   "sendLabel": "Send",
@@ -96,74 +130,40 @@
   "serviceDetailLabel": "Service details required",
   "serviceDetailsAppBarTitle": "Service details",
   "serviceFeeLabel": "Service fee",
+  "serviceFeeLabel": "Service fee",
   "serviceInforLabel": "Service information",
   "serviceInvoiceLabel": "Service Invoice",
   "serviceLabel": "Service ",
   "serviceNameLabel": "Service name",
+  "servicePhotoLabel": "Service photo",
   "servicePriceLabel": "Price",
   "serviceRequestLabel": "Service request",
+  "serviceReviewsLabel": "Service Reviews",
   "skipLabel": "Skip",
   "sortAsLabel": "Sort as",
   "sosLabel": "Call for help",
+  "startLabel": "Start",
+  "telLabel": "Tel: ",
   "termLabel": "Terms of Service",
   "termsOfServiceLabel": "Terms of Service",
   "termsPrivacyLabel": "Terms and Privacy",
+  "timeBookingLabel": "Service booking time",
+  "timeCancelLabel": "Cancellation time",
+  "timeComletionLabel": "Completion time",
   "timeLabel": "Time",
   "total": "Total",
   "totalFeeLabel": "Total Fee",
   "totalLabel": "Total",
+  "totalServiceFeeLabel": "Total service fee",
   "transitFeeLabel": "Transit fee",
   "tubeLabel": "Change the tube",
   "updateLabel": "Update",
   "vehicleMaintenanceLabel": "Vehicle maintenance",
+  "vehicleTypeLabel": "Vehicle type ",
   "videoCallDescription": "Partners can discuss via video call with the repairman for the best preparation!",
   "workerRepairing": "Worker is repairing",
   "workerRepairLabel": "Worker doing repairs",
   "yourFeedbackLabel": "Your feedback",
   "zaloPayLabel": "ZaloPay",
-  "codeOrderLabel": "Code orders: ",
-  "cancelOrderLabel": "You have canceled this order",
-  "completedOrderLabel": "Order completed",
-  "timeBookingLabel": "Service booking time",
-  "timeCancelLabel": "Cancellation time",
-  "timeComletionLabel": "Completion time",
-  "orderDetailLabel": "Order details",
-  "vehicleTypeLabel": "Vehicle type ",
-  "totalServiceFeeLabel": "Total service fee",
-  "feeTransportLabel": "Fee of transport",
-  "intoMoneyLabel": "Into Money",
-  "telLabel": "Tel: ",
-  "paymentMethodLabel": "Payment method",
-  "zaloPaymentLabel": "Pay with Zalo Pay",
-  "cashPaymentLabel": "Payment in cash",
-  "feedBackLabel": "Feedback",
-  "orderInformationLabel": "Order Information",
-  "contactRepairServiceLabel": "Contact repair service",
-  "serviceReviewsLabel": "Service Reviews",
-  "historyLabel": "History",
-  "additionalCostsLabel": "Additional costs",
-  "bonusServicesLabel": "Bonus services",
-  "requestInformationReceivedLabel": "Request information received",
-  "distanceLabel": "Distance ",
-  "quoteLabel": "Quote",
-  "startLabel": "Start",
-  "categoriesLabel": " categories",
-  "messagesForCustomersLabel": "Partners can exchange via text messages and video calls with customers for the best preparation!",
-  "completeRepairLabel": "Complete repair",
-  "pictureLabel": "Picture",
-  "collectMoneyCustomersLabel": "Collect money from customers",
-  "completedItemLabel": "Completed Item",
-  "messagesCheckInformation": "Partners please double check the information, the images above are correct, then slide to complete the application.",
-  "fixAgainLabel": "Fix again",
-  "selectCompletedItemLabel": "Select completed item",
-  "messagesSelectItemLabel": "The partner selects the completed item and sends it to the customer, then wait a bit for the customer to confirm",
-  "addNewServiceLabel": "Add new service",
-  "servicePhotoLabel": "Service photo",
-  "enterServiceNameLabel": "Enter service name",
-  "serviceFeeLabel": "Service fee",
-  "enterMountLabel": "Enter the amount",
-  "priceUnitLabel": "Price unit",
-  "enterShortDescriptionLabel": "Enter a short description",
-  "completeLabel": "Complete",
-  "saveLabel": "Save"
+  "zaloPaymentLabel": "Pay with Zalo Pay"
 }
