--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -8,29 +8,43 @@
   "acceptPolicyLabel": "Bằng việc đăng ký hoặc đăng nhập, bạn đã đồng ý với các ",
   "accountLabel": "Tài khoản của tôi",
   "activateLabel": "Kích hoạt",
+  "additionalCostsLabel": "Chi phí phụ",
   "addLabel": "Thêm mới",
+  "addNewServiceLabel": "Thêm mới dịch vụ",
   "addressLabel": "Địa chỉ: ",
   "addServiceAppBarTitle": "Chọn dịch vụ",
   "andLabel": " và ",
   "autoRepairLabel": "sửa chữa ô tô",
   "blankLabel": "Vui lòng không để trống",
+  "bonusServicesLabel": "Dịch vụ bổ sung",
   "callHelpLabel": "Gọi trợ giúp",
   "canceledLabel": "Đã huỷ",
   "cancelLabel": "Huỷ bỏ",
+  "cancelOrderLabel": "Bạn đã huỷ đơn hàng này",
   "cashLabel": "Tiền mặt",
+  "cashPaymentLabel": "Thanh toán bằng tiền mặt",
+  "categoriesLabel": " hạng mục",
   "changeLanguageLabel": "Thay đổi ngôn ngữ",
   "chooseImageLabel": "Chọn hình ảnh",
   "chooseImageNoteLabel": "Thêm ảnh để thợ sửa chữa hình dung rõ hơn yêu cầu của bạn",
   "chooseProductAppBarTitle": "Chọn sản phẩm",
+  "codeOrderLabel": "Mã đơn hàng: ",
+  "collectMoneyCustomersLabel": "Thu khách",
   "commonErrorLabel": "Đã xảy ra lỗi",
+  "completedItemLabel": "Hạng mục hoàn thành",
+  "completedOrderLabel": "Đơn hàng đã hoàn thành",
+  "completeLabel": "Hoàn thành",
   "completeRegistrationLabel": "Hoàn tất đăng ký",
+  "completeRepairLabel": "Hoàn thành sửa chữa",
   "confirmLabel": "Xác nhận",
+  "contactRepairServiceLabel": "Liên hệ dịch vụ sửa chữa",
   "continueLabel": "Tiếp tục",
   "dateLabel": "NGÀY SINH",
   "dayLabel": "Ngày",
   "dealsForYouLabel": "Ưu đãi dành cho bạn",
   "detailLabel": "Chi tiết",
   "discoverNowLabel": "Khám phá ngay bây giờ",
+  "distanceLabel": "Cách bạn ",
   "distanceLabel": "Khoảng cách",
   "doneLabel": "Xong",
   "editProfileLabel": "Chỉnh sửa hồ sơ",
@@ -38,15 +52,23 @@
   "emptyErrorLabel": "Vui lòng không để trống",
   "emptyLabel": "Trống",
   "endowLabel": "Ưu đãi",
+  "enterMountLabel": "Nhập số tiền",
   "enterOTPCodeLabel": "Nhập OTP của bạn",
+  "enterServiceNameLabel": "Nhập tên dịch vụ",
+  "enterShortDescriptionLabel": "Nhập mô tả ngắn",
   "existedPhoneNumberLabel": "Số điện thoại đã tồn tại",
   "faqsLabel": "Câu hỏi thường gặp",
+  "feedBackLabel": "Phản hồi",
+  "feeTransportLabel": "Phí di chuyển",
+  "fixAgainLabel": "Sửa lại",
   "fullNameLabel": "TÊN ĐẦY ĐỦ",
   "gasStationLabel": "Tìm một trạm xăng",
   "guideAndSupportLabel": "Hướng dẫn & Suport",
+  "historyLabel": "Lịch sử",
   "homeLabel": "Trang chủ",
   "ignoreLabel": "Bỏ qua",
   "imageFromGalleryLabel": "Chọn hình ảnh từ thư viện",
+  "intoMoneyLabel": "Thành tiền",
   "invalidFormatLabel": "Định dạng không hợp lệ",
   "invalidOTPLabel": "Mã OTP không hợp lệ. Vui lòng nhập lại!",
   "invalidPhoneNumberLabel": "Số điện thoại không hợp lệ",
@@ -56,6 +78,9 @@
   "loginPageLabel": "Đăng nhập / Đăng ký tài khoản revup ngay bây giờ",
   "loginPageTitle": "Chào mừng bạn đến với revup!",
   "logoutLabel": "Đăng xuất",
+  "messagesCallForCustomersLabel": "Đối tác có thể trao đổi qua tin nhắn và cuộc gọi video với khách hàng để có sự chuẩn bị tốt nhất nhé!",
+  "messagesCheckInformation": "Đối tác vui lòng kiểm tra lại thông tin, hình ảnh bên trên đều chính xác, sau đó trượt để hoàn thành đơn.",
+  "messagesSelectItemLabel": "Đối tác chọn hạng mục hoàn thành gửi đến khách hàng, rồi chờ xíu để khách hàng xác nhận nhé",
   "minutesLabel": "phút",
   "momoLabel": "MoMo",
   "morePaymentMethodsLabel": "CÁC PHƯƠNG THỨC THANH TOÁN KHÁC",
@@ -66,14 +91,19 @@
   "onboardPageFirstTitle": "Dịch vụ đặt sửa chữa xe chuyên nghiệp",
   "onboardPageSecondTitle": "Luôn túc trực mọi cung đường",
   "onboardPageThirdTitle": "Giá cả minh bạch, yên tâm sửa chữa",
+  "orderDetailLabel": "Chi tiết đơn hàng",
+  "orderInformationLabel": "Thông tin đơn hàng",
   "organizationLabel": "Tài khoản tổ chức",
   "paidLabel": "Đã thanh toán",
   "paymentLabel": "Thanh toán",
+  "paymentMethodLabel": "Phương thức thanh toán",
   "phoneFieldLabel": "Số điện thoại của bạn",
   "phoneLabel": "ĐIỆN THOẠI",
   "phoneRequiredErrorLabel": "Nhập số điện thoại của bạn",
   "photoWithCameraLabel": "Chụp ảnh",
+  "pictureLabel": "Hình ảnh",
   "postLabel": "Bài viết",
+  "priceUnitLabel": "Đơn vị tính giá",
   "privacyLabel": "Chính sách bảo mật",
   "productListLabel": "Danh sách sản phẩm",
   "productPriceLabel": "Đơn giá",
@@ -81,12 +111,16 @@
   "questionCallLabel": "Làm sao để gọi điện trên ứng dụng Revup?",
   "questionOTPLabel": "Tại sao tôi không nhận được Mã xác minh (OTP)?",
   "questionPayLabel": "Làm sao để thanh toán trên ứng dụng Revup?",
+  "quoteLabel": "Báo giá",
   "rateLabel": "Đánh giá lần sửa chữa gần đây nhất của bạn",
   "ratingLabel": "Đánh giá",
   "repairerAroundLabel": "Thợ sửa quanh đây",
+  "requestInformationReceivedLabel": "Thông tin yêu cầu đã nhận",
   "requestServiceLabel": "Dịch vụ yêu cầu",
   "resendOTPLabel": "Gửi lại mã OTP",
   "reviewRepairmentLabel": "Đánh giá cho thợ sửa",
+  "saveLabel": "Lưu",
+  "selectCompletedItemLabel": "Chọn hạng mục hoàn thành",
   "selectProductLabel": "Chọn sản phẩm",
   "sendFeedbackLabel": "Đánh giá, gửi phản hồi của bạn dành cho thợ sửa nhé!",
   "sendLabel": "Gửi",
@@ -96,74 +130,40 @@
   "serviceDetailLabel": "Chi tiết dịch vụ yêu cầu",
   "serviceDetailsAppBarTitle": "Chi tiết dịch vụ",
   "serviceFeeLabel": "Phí dịch vụ",
+  "serviceFeeLabel": "Tiền công dịch vụ",
   "serviceInforLabel": "Thông tin dịch vụ",
   "serviceInvoiceLabel": "Hoá đơn dịch vụ",
   "serviceLabel": "Dịch vụ ",
   "serviceNameLabel": "Tên dịch vụ",
+  "servicePhotoLabel": "Ảnh dịch vụ",
   "servicePriceLabel": "Giá",
   "serviceRequestLabel": "Dịch vụ yêu cầu",
+  "serviceReviewsLabel": "Đánh giá dịch vụ",
   "skipLabel": "Bỏ qua",
   "sortAsLabel": "Sắp xếp theo",
   "sosLabel": "Gọi trợ giúp",
+  "startLabel": "Xuất phát",
+  "telLabel": "SĐT: ",
   "termLabel": "Điều khoản dịch vụ",
   "termsOfServiceLabel": "Điều khoản Dịch vụ",
   "termsPrivacyLabel": "Điều khoản và bảo mật",
+  "timeBookingLabel": "Thời gian đặt dịch vụ",
+  "timeCancelLabel": "Thời gian huỷ",
+  "timeComletionLabel": "Thời gian hoàn thành",
   "timeLabel": "Thời gian",
   "total": "Tổng cộng",
   "totalFeeLabel": "Tổng chi phí",
   "totalLabel": "Tổng cộng",
+  "totalServiceFeeLabel": "Tổng tiền dịch vụ",
   "transitFeeLabel": "Phí di chuyển",
   "tubeLabel": "Thay đổi tube",
   "updateLabel": "Cập nhật",
   "vehicleMaintenanceLabel": "Bảo dưỡng xe",
+  "vehicleTypeLabel": "Loại xe ",
   "videoCallDescription": "Đối tác có thể trao đổi qua cuộc gọi video với thợ sửa để có sự chuẩn bị tốt nhất nhé!",
   "workerRepairing": "Thợ đang tiến hành sửa",
   "workerRepairLabel": "Thợ đang tiến hành sửa chữa",
   "yourFeedbackLabel": "Phản hồi của bạn",
   "zaloPayLabel": "ZaloPay",
-  "codeOrderLabel": "Mã đơn hàng: ",
-  "cancelOrderLabel": "Bạn đã huỷ đơn hàng này",
-  "completedOrderLabel": "Đơn hàng đã hoàn thành",
-  "timeBookingLabel": "Thời gian đặt dịch vụ",
-  "timeCancelLabel": "Thời gian huỷ",
-  "timeComletionLabel": "Thời gian hoàn thành",
-  "orderDetailLabel": "Chi tiết đơn hàng",
-  "vehicleTypeLabel": "Loại xe ",
-  "totalServiceFeeLabel": "Tổng tiền dịch vụ",
-  "feeTransportLabel": "Phí di chuyển",
-  "intoMoneyLabel": "Thành tiền",
-  "telLabel": "SĐT: ",
-  "paymentMethodLabel": "Phương thức thanh toán",
-  "zaloPaymentLabel": "Thanh toán bằng Zalo Pay",
-  "cashPaymentLabel": "Thanh toán bằng tiền mặt",
-  "feedBackLabel": "Phản hồi",
-  "orderInformationLabel": "Thông tin đơn hàng",
-  "contactRepairServiceLabel": "Liên hệ dịch vụ sửa chữa",
-  "serviceReviewsLabel": "Đánh giá dịch vụ",
-  "historyLabel": "Lịch sử",
-  "additionalCostsLabel": "Chi phí phụ",
-  "bonusServicesLabel": "Dịch vụ bổ sung",
-  "requestInformationReceivedLabel": "Thông tin yêu cầu đã nhận",
-  "distanceLabel": "Cách bạn ",
-  "quoteLabel": "Báo giá",
-  "startLabel": "Xuất phát",
-  "categoriesLabel": " hạng mục",
-  "messagesCallForCustomersLabel": "Đối tác có thể trao đổi qua tin nhắn và cuộc gọi video với khách hàng để có sự chuẩn bị tốt nhất nhé!",
-  "completeRepairLabel": "Hoàn thành sửa chữa",
-  "pictureLabel": "Hình ảnh",
-  "collectMoneyCustomersLabel": "Thu khách",
-  "completedItemLabel": "Hạng mục hoàn thành",
-  "messagesCheckInformation": "Đối tác vui lòng kiểm tra lại thông tin, hình ảnh bên trên đều chính xác, sau đó trượt để hoàn thành đơn.",
-  "fixAgainLabel": "Sửa lại",
-  "selectCompletedItemLabel": "Chọn hạng mục hoàn thành",
-  "messagesSelectItemLabel": "Đối tác chọn hạng mục hoàn thành gửi đến khách hàng, rồi chờ xíu để khách hàng xác nhận nhé",
-  "addNewServiceLabel": "Thêm mới dịch vụ",
-  "servicePhotoLabel": "Ảnh dịch vụ",
-  "enterServiceNameLabel": "Nhập tên dịch vụ",
-  "serviceFeeLabel": "Tiền công dịch vụ",
-  "enterMountLabel": "Nhập số tiền",
-  "priceUnitLabel": "Đơn vị tính giá",
-  "enterShortDescriptionLabel": "Nhập mô tả ngắn",
-  "completeLabel": "Hoàn thành",
-  "saveLabel": "Lưu"
+  "zaloPaymentLabel": "Thanh toán bằng Zalo Pay"
 }
