--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -165,5 +165,11 @@
   "workerRepairLabel": "Worker doing repairs",
   "yourFeedbackLabel": "Your feedback",
   "zaloPayLabel": "ZaloPay",
-  "zaloPaymentLabel": "Pay with Zalo Pay"
+  "zaloPaymentLabel": "Pay with Zalo Pay",
+  "otpCodeExpiredLabel": "Your otp code has been expired. We are sending you a new OTP code",
+  "invalidOTPLabel": "Invalid OTP code. Please enter again!",
+  "loginSuccessLabel": "Login successfully",
+  "unknowIssuesLabel" : "Something went wrong, we are working on this problem",
+  "enterPhoneNumberLabel": "Enter your phone number to continue",
+  "toomanyReqLabel" : "You request OTP too many time, please wait before retry"
 }
