refactor: add arb

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -166,5 +166,24 @@
   "workerRepairLabel": "Worker doing repairs",
   "yourFeedbackLabel": "Your feedback",
   "zaloPayLabel": "ZaloPay",
-  "zaloPaymentLabel": "Pay with Zalo Pay"
+  "zaloPaymentLabel": "Pay with Zalo Pay",
+  "hiLabel": "Hi",
+  "operationStatusLabel": "Operation status",
+  "recentOrdersLabel": "Recent orders",
+  "weatherLabel": "The weather today",
+  "myRatingLabel": "My rating",
+  "allRatingLabel": "All",
+  "yesterdayLabel": "yesterday",
+  "serviceProviderAuthenticationLabel": "Service provider authentication",
+  "portraitLabel": "Portrait",
+  "basicInformationLabel": "Basic information",
+  "imgCardLabel": "Photo CMT/CMND",
+  "imgBeforeLabel": "Front",
+  "imgAfterLabel": "Backside",
+  "editProfileLabel": "Edit",
+  "wageLabel": "Wages",
+  "lastEditLabel": "Last edit",
+  "productTypeLabel": "Product type",
+  "motorcycleLabel": "Motorcycle",
+  "carLabel": "Car"
 }
