--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -165,5 +165,24 @@
   "workerRepairLabel": "Thợ đang tiến hành sửa chữa",
   "yourFeedbackLabel": "Phản hồi của bạn",
   "zaloPayLabel": "ZaloPay",
-  "zaloPaymentLabel": "Thanh toán bằng Zalo Pay"
+  "zaloPaymentLabel": "Thanh toán bằng Zalo Pay",
+  "hiLabel": "Xin chào",
+  "operationStatusLabel": "Trạng thái hoạt động",
+  "recentOrdersLabel": "Đơn hàng gần đây",
+  "weatherLabel": "Thời tiết hôm nay",
+  "myRatingLabel": "Đánh giá của tôi",
+  "allRatingLabel": "Tất cả",
+  "yesterdayLabel": "ngày trước",
+  "serviceProviderAuthenticationLabel": "Xác thực nhà cung cấp dịch vụ",
+  "portraitLabel": "Ảnh chân dung",
+  "basicInformationLabel": "Thông tin cơ bản",
+  "imgCardLabel": "Ảnh CMT/CMND",
+  "imgBeforeLabel": "Mặt trước",
+  "imgAfterLabel": "Mặt sau",
+  "editProfileLabel": "Chỉnh sửa",
+  "wageLabel": "Tiền công",
+  "lastEditLabel": "Chỉnh sửa cuối",
+  "productTypeLabel": "Loại sản phẩm",
+  "motorcycleLabel": "Xe máy",
+  "carLabel": "Ô tô"
 }
