--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -184,5 +184,14 @@
   "yesterdayLabel": "ngày trước",
   "yourFeedbackLabel": "Phản hồi của bạn",
   "zaloPayLabel": "ZaloPay",
-  "zaloPaymentLabel": "Thanh toán bằng Zalo Pay"
+  "zaloPaymentLabel": "Thanh toán bằng Zalo Pay",
+  "otpCodeExpiredLabel": "Mã OTP của bạn đã hết hạn. Chúng tôi đang gửi mã otp mới cho bạn",
+  "invalidOTPLabel": "Mã OTP không hợp lệ. Vui lòng nhập lại!",
+  "loginSuccessLabel": "Đăng nhập thành công",
+  "unknowIssuesLabel" : "Đã có lỗi không xác định, chúng tôi đang cố gắng sửa lỗi này",
+  "enterPhoneNumberLabel": "Nhập số điện thoại của bạn để tiếp tục",
+  "toomanyReqLabel" : "Bạn đã yêu cầu gửi OTP quá nhiều lần, vui lòng đợi thêm",
+  "idCardLabel": "Số cmnd hoặc cccd",
+  "imageCardLabel": "Ảnh cmnd hoặc cccd",
+  "bioLabel": "Câu nói yêu thích của bạn"
 }
