feat: add new request page

--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -47,7 +47,6 @@
   "dealsForYouLabel": "Ưu đãi dành cho bạn",
   "detailLabel": "Chi tiết",
   "discoverNowLabel": "Khám phá ngay bây giờ",
-  "distanceLabel": "Cách bạn ",
   "distanceLabel": "Khoảng cách",
   "doneLabel": "Xong",
   "editProfileLabel": "Chỉnh sửa hồ sơ",
@@ -175,7 +174,7 @@
   "tubeLabel": "Thay đổi tube",
   "updateLabel": "Cập nhật",
   "vehicleMaintenanceLabel": "Bảo dưỡng xe",
-  "vehicleTypeLabel": "Loại xe ",
+  "vehicleTypeLabel": "Loại phương tiện",
   "videoCallDescription": "Đối tác có thể trao đổi qua cuộc gọi video với thợ sửa để có sự chuẩn bị tốt nhất nhé!",
   "wageLabel": "Tiền công",
   "weatherLabel": "Thời tiết hôm nay",
@@ -188,10 +187,14 @@
   "otpCodeExpiredLabel": "Mã OTP của bạn đã hết hạn. Chúng tôi đang gửi mã otp mới cho bạn",
   "invalidOTPLabel": "Mã OTP không hợp lệ. Vui lòng nhập lại!",
   "loginSuccessLabel": "Đăng nhập thành công",
-  "unknowIssuesLabel" : "Đã có lỗi không xác định, chúng tôi đang cố gắng sửa lỗi này",
+  "unknowIssuesLabel": "Đã có lỗi không xác định, chúng tôi đang cố gắng sửa lỗi này",
   "enterPhoneNumberLabel": "Nhập số điện thoại của bạn để tiếp tục",
-  "toomanyReqLabel" : "Bạn đã yêu cầu gửi OTP quá nhiều lần, vui lòng đợi thêm",
+  "toomanyReqLabel": "Bạn đã yêu cầu gửi OTP quá nhiều lần, vui lòng đợi thêm",
   "idCardLabel": "Số cmnd hoặc cccd",
   "imageCardLabel": "Ảnh cmnd hoặc cccd",
-  "bioLabel": "Câu nói yêu thích của bạn"
+  "bioLabel": "Câu nói yêu thích của bạn",
+  "feeOfTransportLabel": "Phí di chuyển",
+  "acceptLabel": "Chấp nhận",
+  "newRequestLabel": "Yêu cầu mới",
+  "repairItemsLabel": "hạng mục"
 }
