--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -188,10 +188,14 @@
   "otpCodeExpiredLabel": "Your otp code has been expired. We are sending you a new OTP code",
   "invalidOTPLabel": "Invalid OTP code. Please enter again!",
   "loginSuccessLabel": "Login successfully",
-  "unknowIssuesLabel" : "Something went wrong, we are working on this problem",
+  "unknowIssuesLabel": "Something went wrong, we are working on this problem",
   "enterPhoneNumberLabel": "Enter your phone number to continue",
-  "toomanyReqLabel" : "You request OTP too many time, please wait before retry",
+  "toomanyReqLabel": "You request OTP too many time, please wait before retry",
   "idCardLabel": "ID Card Number",
   "imageCardLabel": "ID Card Image",
-  "bioLabel": "Your slogan"
+  "bioLabel": "Your slogan",
+  "feeOfTransportLabel": "Fee of transport",
+  "acceptLabel": "Accept",
+  "newRequestLabel": "New request",
+  "repairItemsLabel": "repair items"
 }
