--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -87,6 +87,7 @@
   "loginPageLabel": "Login / Register revup account now",
   "loginPageTitle": "Welcome to revup!",
   "logoutLabel": "Logout",
+  "messagesCallForCustomersLabel": "Đối tác có thể trao đổi qua tin nhắn và cuộc gọi video với khách hàng để có sự chuẩn bị tốt nhất nhé!",
   "messagesCheckInformation": "Partners please double check the information, the images above are correct, then slide to complete the application.",
   "messagesForCustomersLabel": "Partners can exchange via text messages and video calls with customers for the best preparation!",
   "messagesSelectItemLabel": "The partner selects the completed item and sends it to the customer, then wait a bit for the customer to confirm",
