refactor: wire api

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -116,7 +116,7 @@
   "pictureLabel": "Picture",
   "portraitLabel": "Portrait",
   "postLabel": "Posts",
-  "priceUnitLabel": "Price unit",
+  "priceUnitLabel": "Category",
   "privacyLabel": "Privacy Policy",
   "productListLabel": "List of products",
   "productPriceLabel": "Unit price",
