refactor: wire api

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -194,5 +194,6 @@
   "idCardLabel": "ID Card Number",
   "imageCardLabel": "ID Card Image",
   "bioLabel": "Your slogan",
-  "idImgRequiredLabel": "You have to take a photo of your font id card"
+  "idImgRequiredLabel": "You have to take a photo of your font id card",
+  "failLabel": "Fail"
 }
