--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -194,5 +194,6 @@
   "idCardLabel": "Số cmnd hoặc cccd",
   "imageCardLabel": "Ảnh cmnd hoặc cccd",
   "bioLabel": "Câu nói yêu thích của bạn",
-  "idImgRequiredLabel": "Bạn hãy chụp ảnh mặt trước cmnd hoặc cccd của bạn"
+  "idImgRequiredLabel": "Bạn hãy chụp ảnh mặt trước cmnd hoặc cccd của bạn",
+  "failLabel": "Thất bại"
 }
